# gcp-chess

./: .gitignore  main.py  pyproject.toml  requirements.txt
back_end/: board.py  config.py  game.py  moves.py  utils.py
back_end/lookup_tables/: BISHOP_MOVES.npy  BLACK_PAWN_ATTACKS.npy  BLACK_PAWN_MOVES.npy  KING_MOVES.npy  KNIGHT_MOVES.npy  QUEEN_MOVES.npy  ROOK_MOVES.npy  WHITE_PAWN_ATTACKS.npy  WHITE_PAWN_MOVES.npy
common/: config.py
scripts/: make_move_masks.py
